fix text alignment for sidebar headers

--- a/styles/modules/sidebarNavItem.module.css
+++ b/styles/modules/sidebarNavItem.module.css
@@ -13,7 +13,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: fit-content;
+  width: 100%;
 }
 
 .sidebarNavItem:hover h3 {
